--- a/BlockTrip_BE/blocktrip/build.gradle
+++ b/BlockTrip_BE/blocktrip/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	implementation 'org.jsoup:jsoup:1.14.2'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+
 
 	runtimeOnly 'com.h2database:h2'
 }
