--- a/BlockTrip_BE/blocktrip/build.gradle
+++ b/BlockTrip_BE/blocktrip/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	implementation 'org.jsoup:jsoup:1.14.2'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.seleniumhq.selenium:selenium-java:4.15.0'
+	implementation 'io.github.bonigarcia:webdrivermanager:5.3.1'
 
 
 
