--- a/BlockTrip_BE/blocktrip/build.gradle
+++ b/BlockTrip_BE/blocktrip/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.seleniumhq.selenium:selenium-java:4.15.0'
 	implementation 'io.github.bonigarcia:webdrivermanager:5.3.1'
+	implementation 'com.google.maps:google-maps-services:2.2.0'
 
 
 
