--- a/BlockTrip_BE/blocktrip/src/main/resources/application.properties
+++ b/BlockTrip_BE/blocktrip/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+gpt3.api.endpoint=https://api.openai.com/v1/engines/davinci-002/completions
+gpt3.api.key=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
