--- a/BlockTrip_FE/package.json
+++ b/BlockTrip_FE/package.json
@@ -10,21 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@tanstack/react-query": "^5.8.7",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0"
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.7",
+    "vite": "^5.0.10"
   }
 }
